--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,3 +2,9 @@
     background-image: url("https://images.unsplash.com/photo-1551162685-ef4c27fdd699?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80");
     background-position: center;
 }
+
+.link-active{
+    color:red;
+    background-color: yellow;
+    
+}
