--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -9,6 +9,7 @@
                </div> 
                <div class="card-body">
                <h5 class="card-title">{{item.name}}</h5>
+               <a class="btn btn-primary" (click)="goToProductDetails(item.id)">Details</a>
                </div>
         </div>
     </div>
